--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -33,6 +33,9 @@ But it must have the following features:
     <p id="idp">
       when you find the perfect avocado
     </p>
+    <p>
+      efniwqbfiwebnfoewnfienwfnewifbw
+    </p>
 
   </div>
   
