--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -55,7 +55,13 @@ But it must have the following features:
     <p>
       wkfenfwenifninewionfw
     </p>
-
+    <p>
+      jebfuewbifwiefwefuiewvddsvdsvsd
+    </p>
+    
+    <p>
+      wenfinesfnewif
+    </p>
 
   </div>
   
