--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -57,10 +57,13 @@ But it must have the following features:
     </p>
     <p>
       jebfuewbifwiefwefuiewvddsvdsvsd
-    </p>
+    </p>wdqwdqw
     
     <p>
       wenfinesfnewif
+    </p>
+    <p>
+      nfnwfnwonfownfownfonweofq
     </p>
 
   </div>
