--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -70,6 +70,10 @@ But it must have the following features:
       fewfwefwefwf
     </p>
 
+    <p>
+      Trying to motivate myself
+    </p>
+
   </div>
   
 </body>
