--- a/7.0+CSS+Cascade/index.html
+++ b/7.0+CSS+Cascade/index.html
@@ -20,6 +20,9 @@
       <div class="box inner-box">
         <p class="white-text">White Text</p>
       </div>
+      <p>
+        I am finally in track
+      </p>
     </div>
   </div>
 </body>
