--- a/7.0+CSS+Cascade/index.html
+++ b/7.0+CSS+Cascade/index.html
@@ -21,7 +21,7 @@
         <p class="white-text">White Text</p>
       </div>
       <p>
-        I am finally in track
+        I am finally in track...
       </p>
     </div>
   </div>
