--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -27,53 +27,12 @@ But it must have the following features:
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div>
-    <img id="photo"src="./assets/images/daenerys.jpeg">
-    <h1 id="h1text">That Special Moment</h1>
-    <p id="idp">
+  <div class="poster">
+    <img class="motivation-img" src="./assets/images/daenerys.jpeg">
+    <h1>That Special Moment</h1>
+    <p>
       when you find the perfect avocado
     </p>
-    <p>
-      efniwqbfiwebnfoewnfienwfnewifbw
-    </p>
-    <p>
-      euhfiwnefnwinfewinfew
-    </p>
-    <p>
-      wkfenfwenifninewionfw
-    </p>
-    <p>
-      wkfenfwenifninewionfw
-    </p>
-
-    <p>
-      wkfenfwenifninewionfw
-    </p>
-    <p>
-      wkfenfwenifninewionfw
-    </p>
-    <p>
-      wkfenfwenifninewionfw
-    </p>
-    <p>
-      jebfuewbifwiefwefuiewvddsvdsvsd
-    </p>wdqwdqw
-    
-    <p>
-      wenfinesfnewif
-    </p>
-    <p>
-      nfnwfnwonfownfownfonweofq
-    </p>
-
-    <p>
-      fewfwefwefwf
-    </p>
-
-    <p>
-      Trying to motivate myself
-    </p>
-
   </div>
   
 </body>
