--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -5,6 +5,22 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    .red-circle {
+      background-color: red;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+    }
+    .blue-box {
+      background-color: blue;
+      height: 300px;
+      width: 500px;
+    }
+    div.bluebox {
+      position: static;
+      left: 50px;
+    }
+    
   </style>
 </head>
 
