--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -10,17 +10,17 @@
       height: 200px;
       width: 200px;
       border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
     }
     .blue-box {
+      position: relative;
       background-color: blue;
       height: 300px;
       width: 500px;
-    }
-    div.bluebox {
-      position: static;
-      left: 50px;
-      right: 50px;
-      color: green;
+      top: 200px;
+      left: 200px;
     }
   
 
